# snapspec

./: .dockerignore  .gitignore  AGENTS.md  BUGS_AND_FIXES.md  CLAUDE.md  CMakeLists.txt  DEMO_GUIDE.md  LICENSE  PUBLISHABILITY_AUDIT.md  README.md  SCRATCHPAD.md  SESSION_LOG.md  VM_RUNBOOK.md  WHATS_LEFT.md  Youbin_Kim_Contributions.md  cluster.yaml  cluster_local.yaml  launch.py  requirements.txt
demo_remote/: README.md  cpp_blockstore.py  run_remote_client.py  run_remote_node.py  sqlite_blockstore.py
docker/: Dockerfile  Dockerfile.mysql  README.md  cluster_launch.yaml  cluster_launch_conflict.yaml  cluster_launch_retry.yaml  docker-compose.launch.yml  docker-compose.mysql.yml  docker-compose.nodelocal.yml  docker-compose.scale.yml  docker-compose.two-device.nodes.yml  docker-compose.yml  run.sh  run_all_experiments.ps1  run_sweep.sh
docs/: model.md  mysql_outbox_recovery.md
experiments/: README.md  analyze_vm_results.py  plot.py  run_accuracy_demo.py  run_dev_sweep.py  run_distributed.py  run_docker_sweep.sh  run_experiment.py  run_full_docker_sweep.sh  run_microbenchmarks.py  run_row_docker_sweep.sh  run_sweep.py  run_vm_sweep.py  test.yaml  test_cases.py  verify_mysql.py
paper_runs/: README.md
results/: README.md  cluster_pause_and_snap.csv  cluster_speculative.csv  cluster_two_phase.csv  docker_distributed_row_pause_and_snap_default_rep1.csv  docker_distributed_row_speculative_default_rep1.csv  exp1_frequency_cow_pause_10_rep1.csv  exp1_frequency_cow_pause_1_rep1.csv  exp1_frequency_cow_pause_20_rep1.csv  exp1_frequency_cow_pause_2_rep1.csv  (+74 more)
(+424 files in other folders)
